RESOLVED FIXED202323
Layout Test http/tests/cache-storage/cache-records-persistency.https.html is failing
https://bugs.webkit.org/show_bug.cgi?id=202323
Summary Layout Test http/tests/cache-storage/cache-records-persistency.https.html is ...
Truitt Savell
Reported 2019-09-27 10:42:04 PDT
The following layout tests are failing on Mac and iOS WK2 http/tests/cache-storage/cache-clearing-origin.https.html http/tests/cache-storage/cache-origins.https.html http/tests/cache-storage/cache-persistency.https.html http/tests/cache-storage/cache-records-persistency.https.html Probable cause: These tests are failing in tandem together sense around r250350 Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fcache-storage%2Fcache-clearing-origin.https.html%20http%2Ftests%2Fcache-storage%2Fcache-origins.https.html%20http%2Ftests%2Fcache-storage%2Fcache-persistency.https.html%20http%2Ftests%2Fcache-storage%2Fcache-records-persistency.https.html I was able to reproduce these failures together using a test list and bisection. I found that if you run http/tests/IndexedDB/storage-limit-2.https.html before these 4 tests they all fail. Reproduction: run-webkit-tests --root testbuild-250425 http/tests/IndexedDB/storage-limit-2.https.html http/tests/cache-storage/cache-clearing-origin.https.html http/tests/cache-storage/cache-origins.https.html http/tests/cache-storage/cache-persistency.https.html http/tests/cache-storage/cache-records-persistency.https.html --child-processes 1
Attachments
Patch (5.12 KB, patch)
2019-09-27 11:49 PDT, Alex Christensen
thorton: review+
Radar WebKit Bug Importer
Comment 1 2019-09-27 10:42:52 PDT
Truitt Savell
Comment 2 2019-09-27 10:45:49 PDT
Bisecting the revisions of this failure found that r250351 is to blame. 250350 passes 250351 fails
Radar WebKit Bug Importer
Comment 3 2019-09-27 10:46:02 PDT
Radar WebKit Bug Importer
Comment 4 2019-09-27 10:47:17 PDT
Alex Christensen
Comment 5 2019-09-27 11:00:04 PDT
I can reproduce this and am looking into it.
Alex Christensen
Comment 6 2019-09-27 11:49:39 PDT
Tim Horton
Comment 7 2019-09-27 13:12:05 PDT
Comment on attachment 379751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=379751&action=review > Source/WebKit/ChangeLog:16 > + This needs more words
Alex Christensen
Comment 8 2019-09-27 13:50:04 PDT
Note You need to log in before you can comment on or make changes to this bug.