Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.cpp
@@ -62,7 +62,6 @@ void NetworkProcessCreationParameters::encode(IPC::Encoder& encoder) const
     encoder << suppressesConnectionTerminationOnSystemChange;
 #endif
     encoder << defaultDataStoreParameters;
-    encoder << nonDefaultDataStoreParameters;
 #if USE(SOUP)
     encoder.encodeEnum(cookieAcceptPolicy);
     encoder << ignoreTLSErrors;
@@ -146,12 +145,6 @@ bool NetworkProcessCreationParameters::decode(IPC::Decoder& decoder, NetworkProc
         return false;
     result.defaultDataStoreParameters = WTFMove(*defaultDataStoreParameters);
 
-    Optional<Vector<WebsiteDataStoreParameters>> nonDefaultDataStoreParameters;
-    decoder >> nonDefaultDataStoreParameters;
-    if (!nonDefaultDataStoreParameters)
-        return false;
-    result.nonDefaultDataStoreParameters = WTFMove(*nonDefaultDataStoreParameters);
-    
 #if USE(SOUP)
     if (!decoder.decodeEnum(result.cookieAcceptPolicy))
         return false;
