Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.h
@@ -78,7 +78,6 @@ struct NetworkProcessCreationParameters {
 #endif
 
     WebsiteDataStoreParameters defaultDataStoreParameters;
-    Vector<WebsiteDataStoreParameters> nonDefaultDataStoreParameters;
     
 #if USE(SOUP)
     HTTPCookieAcceptPolicy cookieAcceptPolicy { HTTPCookieAcceptPolicy::AlwaysAccept };
